[package]
name = "rusted"
version = "0.1.0"
edition = "2021"
authors = [
  "Willi Butz <willi.butz@mayflower.de>"
]
license = "MIT or Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive","env"] }
futures = "0.3"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process","rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["std","fmt","env-filter"] }
